// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-back-to-top should render positioned in the centre 1`] = `
<ic-back-to-top class="ic-back-to-top-center" position="center" target="topEl">
  <template shadowrootmode="open">
    <ic-button class="ic-button-size-medium ic-button-variant-secondary" exportparts="button">
      <template shadowrootmode="open">
        <button aria-label="Back to top" class="button" part="button" type="button">
          <slot></slot>
        </button>
      </template>
      <span class="ic-back-to-top-icon">
        svg
      </span>
      Back to top
    </ic-button>
  </template>
</ic-back-to-top>
`;

exports[`ic-back-to-top should render positioned on the left 1`] = `
<ic-back-to-top class="ic-back-to-top-left" position="left" target="topEl">
  <template shadowrootmode="open">
    <ic-button class="ic-button-size-medium ic-button-variant-secondary" exportparts="button">
      <template shadowrootmode="open">
        <button aria-label="Back to top" class="button" part="button" type="button">
          <slot></slot>
        </button>
      </template>
      <span class="ic-back-to-top-icon">
        svg
      </span>
      Back to top
    </ic-button>
  </template>
</ic-back-to-top>
`;

exports[`ic-back-to-top should render when target starts with #: should render when target starts with # 1`] = `
<ic-back-to-top class="ic-back-to-top-right" target="#topEl">
  <template shadowrootmode="open">
    <ic-button class="ic-button-size-medium ic-button-variant-secondary" exportparts="button">
      <template shadowrootmode="open">
        <button aria-label="Back to top" class="button" part="button" type="button">
          <slot></slot>
        </button>
      </template>
      <span class="ic-back-to-top-icon">
        svg
      </span>
      Back to top
    </ic-button>
  </template>
</ic-back-to-top>
`;

exports[`ic-back-to-top should render with an icon only: should render with an icon only 1`] = `
<ic-back-to-top class="ic-back-to-top-right" target="topEl" variant="icon">
  <template shadowrootmode="open">
    <ic-button class="ic-button-size-large ic-button-variant-icon-secondary icon-only" exportparts="button">
      <template shadowrootmode="open">
        <ic-tooltip id="ic-tooltip-ic-button-with-tooltip-12" label="Back to top" placement="bottom" silent="" target="ic-button-with-tooltip-12">
          <button aria-describedby="ic-tooltip-ic-button-with-tooltip-12" aria-label="Back to top" class="button" part="button" type="button">
            <slot></slot>
          </button>
        </ic-tooltip>
      </template>
      <span class="ic-back-to-top-icon">
        svg
      </span>
    </ic-button>
  </template>
</ic-back-to-top>
`;

exports[`ic-back-to-top should render with dark theme: should render with dark theme 1`] = `
<ic-back-to-top class="ic-back-to-top-right ic-theme-dark" target="topEl" theme="dark">
  <template shadowrootmode="open">
    <ic-button class="ic-button-size-medium ic-button-variant-secondary ic-theme-dark" exportparts="button">
      <template shadowrootmode="open">
        <button aria-label="Back to top" class="button" part="button" type="button">
          <slot></slot>
        </button>
      </template>
      <span class="ic-back-to-top-icon">
        svg
      </span>
      Back to top
    </ic-button>
  </template>
</ic-back-to-top>
`;

exports[`ic-back-to-top should render with footer: should render with footer 1`] = `
<body>
  <div id="ic-back-to-top-target" tabindex="-1"></div>
  <div id="topEl">
    <ic-back-to-top class="ic-back-to-top-right" target="topEl">
      <template shadowrootmode="open">
        <ic-button class="ic-button-size-medium ic-button-variant-secondary" exportparts="button">
          <template shadowrootmode="open">
            <button aria-label="Back to top" class="button" part="button" type="button">
              <slot></slot>
            </button>
          </template>
          <span class="ic-back-to-top-icon">
            svg
          </span>
          Back to top
        </ic-button>
      </template>
    </ic-back-to-top>
  </div>
  <ic-footer class="ic-footer ic-footer-foreground-light ic-footer-light ic-footer-sparse ic-footer-ungrouped">
    <template shadowrootmode="open">
      <footer>
        <div class="footer-compliance">
          <ic-section-container aligned="left" fullheight="">
            <div class="footer-compliance-inner">
              <div class="footer-copyright">
                <ic-typography variant="label-uppercase">
                  © Crown Copyright
                </ic-typography>
              </div>
            </div>
          </ic-section-container>
        </div>
      </footer>
    </template>
  </ic-footer>
</body>
`;

exports[`ic-back-to-top should render with light theme: should render with light theme 1`] = `
<ic-back-to-top class="ic-back-to-top-right ic-theme-light" target="topEl" theme="light">
  <template shadowrootmode="open">
    <ic-button class="ic-button-size-medium ic-button-variant-secondary ic-theme-light" exportparts="button">
      <template shadowrootmode="open">
        <button aria-label="Back to top" class="button" part="button" type="button">
          <slot></slot>
        </button>
      </template>
      <span class="ic-back-to-top-icon">
        svg
      </span>
      Back to top
    </ic-button>
  </template>
</ic-back-to-top>
`;

exports[`ic-back-to-top should render with no targetId set: should render with no targetId set 1`] = `
<ic-back-to-top class="ic-back-to-top-right">
  <template shadowrootmode="open">
    <ic-button class="ic-button-size-medium ic-button-variant-secondary" exportparts="button">
      <template shadowrootmode="open">
        <button aria-label="Back to top" class="button" part="button" type="button">
          <slot></slot>
        </button>
      </template>
      <span class="ic-back-to-top-icon">
        svg
      </span>
      Back to top
    </ic-button>
  </template>
</ic-back-to-top>
`;

exports[`ic-back-to-top should render: should render 1`] = `
<ic-back-to-top class="ic-back-to-top-right" target="topEl">
  <template shadowrootmode="open">
    <ic-button class="ic-button-size-medium ic-button-variant-secondary" exportparts="button">
      <template shadowrootmode="open">
        <button aria-label="Back to top" class="button" part="button" type="button">
          <slot></slot>
        </button>
      </template>
      <span class="ic-back-to-top-icon">
        svg
      </span>
      Back to top
    </ic-button>
  </template>
</ic-back-to-top>
`;
